InputOutput/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;\\ghs-file1.lvjusd.k12.ca.us\Student Data\michael.ske\My Documents\BlueJ Projects\InputOutput
-d
\\ghs-file1.lvjusd.k12.ca.us\Student Data\michael.ske\My Documents\BlueJ Projects\InputOutput\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
\\ghs-file1.lvjusd.k12.ca.us\Student Data\michael.ske\My Documents\BlueJ Projects\InputOutput\projectThree.java
<---- end of javadoc command ---->
Loading source file \\ghs-file1.lvjusd.k12.ca.us\Student Data\michael.ske\My Documents\BlueJ Projects\InputOutput\projectThree.java...
\\ghs-file1.lvjusd.k12.ca.us\Student Data\michael.ske\My Documents\BlueJ Projects\InputOutput\projectThree.java:26: error: ';' expected
                       System.out.println("Element #" + iSquare + " is empty")                       
                                                                              ^
1 error
